webkit fix navbar spacing

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -2,7 +2,7 @@
     background-color: #101010;
     color: lightcyan;
     font-size: larger;
-    width: 230px;
+    width: 240px;
     height: 100%;
     position:fixed;
     top: 0;
