--- a/style/page.css
+++ b/style/page.css
@@ -6,7 +6,7 @@ body {
 
 .page {
     margin-top: 15px;
-    margin-left: 245px;
+    margin-left: 255px;
 }
 
 .page a {
